# kerntop

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
src/kerntop/: __init__.py  app.py  apt_commands.py  apt_compat.py  apt_state.py  kernels.py
src/kerntop/screens/: __init__.py  header_cleanup.py  kernel_actions.py  modal.py  queue.py
tests/: test_apt_commands.py  test_apt_compat_edges.py  test_apt_state.py  test_core.py  test_kernels_edges.py
