[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project]
name = "kerntop"
version = "0.0.0"
description = "A safe terminal UI for managing Linux kernels on apt-based systems"
readme = "README.md"
authors = [
    { name = "Robin van der Noord", email = "robinvandernoord@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kerntop = "kerntop:main"
